--- a/Android/app/src/main/assets/embed21.html
+++ b/Android/app/src/main/assets/embed21.html
@@ -5,8 +5,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1.0 maximum-scale=1.0 user-scalable=yes" />
     <title></title>
     <meta http-equiv="Content-Language" content="vi" />
-
-    <link rel="stylesheet" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cser.vn/app2021/css/app.css" />
     <style type="text/css">
         *, ::after, ::before {
             box-sizing: border-box;
@@ -92,6 +91,8 @@
             window.ANDROID && ANDROID.NoBack(true);
             document.getElementById('ANDROID_ONBACK_MESS').style.display = 'none';
         }
+
+        var NEW_APP = true;
 
     </script>
 </head>
